--- a/Проект Бурение скважин/readme
+++ b/Проект Бурение скважин/readme
@@ -1,1 +1,3 @@
-Проект
+Проект по выбору региона для бурения. В наличие имеются данные  технических характистик скважи трех
+добывающих регионов. Построена модель, позволяющая определть регион с наилучшими экономическми показателямию.
+Работа выполнена в программе python при помощи машинного обучения с использованием библиотек pandas, numpy, sklearn, bootstrap.
