--- a/Отток клиентов банка/readme
+++ b/Отток клиентов банка/readme
@@ -1,3 +1,3 @@
-**Проект по прогнозированию оттока клиентов банка на основе имеющейся базы данных.** Получен прогноз оттока клиентов банка
+Проект по прогнозированию оттока клиентов банка на основе имеющейся базы данных. Получен прогноз оттока клиентов банка
 Работа выполнена в программе python при помощи машинного обучения с использованием библиотек pandas, numpy, sklearn.
 Проект завершен.
