--- a/Проект Бурение скважин/readme
+++ b/Проект Бурение скважин/readme
@@ -1,3 +1,4 @@
 Проект по выбору региона для бурения. В наличие имеются данные  технических характистик скважи трех
-добывающих регионов. Построена модель, позволяющая определть регион с наилучшими экономическми показателямию.
+добывающих регионов. Построена модель, позволяющая определть регион с наилучшими экономическими показателями.
 Работа выполнена в программе python при помощи машинного обучения с использованием библиотек pandas, numpy, sklearn, bootstrap.
+Проект завершен.
