--- a/Проект определения тарифа телекома/readme
+++ b/Проект определения тарифа телекома/readme
@@ -1,1 +1,4 @@
-Проект определение тарифа телекома. Необходимо провести анализ двух тарифов оператора сотовой связи, с целью определения наилучшего. В работе выполнена в программе  Python с использованием библиотек pandas, matplotlib, numpy и scipy.
+Проект определение тарифа телекома. Необходимо провести анализ двух тарифов оператора сотовой связи, с целью определения наилучшего.
+Результатом работы являются рекомендации по тарифной политике компании, а также проверка нескольких гипотез по поведению клиентов.
+В работе выполнена в программе  Python с использованием библиотек pandas, matplotlib, numpy и scipy.
+Проект завершен.
