--- a/Проект по изучению коэффициента извлечения золота/readme
+++ b/Проект по изучению коэффициента извлечения золота/readme
@@ -1,1 +1,4 @@
-Проект по разработке модели, прогнозирующей коэффициент восстановления золота из золотосодержащей руды, с целью оптимизации процесса золотодобычи. Работа выполнена в программе Python с использованием библиотек pandas, matplotlib, numpy, seaborn, importlib и sklearn.
+Проект по разработке модели, прогнозирующей коэффициент восстановления золота из золотосодержащей руды, с целью оптимизации процесса золотодобычи. 
+В результате проверена технология по извлечению золота и даны рекомендации по улучшению технологии.
+Работа выполнена в программе Python с использованием библиотек pandas, matplotlib, numpy, seaborn, importlib и sklearn.
+Проект завершен.
