--- a/проект по оценке автомобилец/readme
+++ b/проект по оценке автомобилец/readme
@@ -1,1 +1,4 @@
-Проект по разработке модели, прогнозирующей рыночную стоимость автомобиля на основе исторических данных, с целью привлечения новых клиентов. Работа выполнена в программе Python с использованием библиотек pandas, matplotlib, numpy, catboost и sklearn.
+Проект по разработке модели, прогнозирующей рыночную стоимость автомобиля на основе исторических данных, с целью привлечения новых клиентов. 
+В результате получена модель определяющая рыночную стоимость автомобиля на основе технических характеристик.
+Работа выполнена в программе Python с использованием библиотек pandas, matplotlib, numpy, catboost и sklearn.
+Проект завершен.
